public/css/cocktail-home-style.css
:root {
    --global-background-color: #222;
}


html,
body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    display: flex;
    flex-direction: column;


    font-family: 'Space Mono', serif;
    background-color: var(--global-background-color);
}

header > nav > ul {
    background: linear-gradient(rgba(255,255,255,1), transparent)
}

nav a {
    color: black;
}

h1,h2,h3,h4,h5,h6 {
    font-family: Tenor Sans;
}

.hero-image {
    width: 100%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-shrink: 0;
    align-items: center;

    background: linear-gradient(transparent 0%, transparent 70%, var(--global-background-color) 100%), url("../images/hero_cocktails_mobile.jpg");
    background-position-x: 40%;
    background-repeat: no-repeat;
    background-size: cover;
}

.hero-text {
    padding-top: 14vw;
    padding-bottom: 25vw;

    text-align: center;
    font-size: 1.1em;
    color: white;
}

div.hero-text>h1 {
    margin-top: 10vw;
    font-size: 6vw;
    margin-bottom: 0;
}

div.hero-text>p {
    font-size: 1.2em;
}

.fa-arrow-circle-down {
    color: white;
    font-size: 2em;
    text-decoration: none;
    transition-duration: 0.4s;
}

.fa-arrow-circle-down:hover {
    transform: scale(1.2);
}

.image-gallery {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    padding: 1%;
    width: 100%;
    box-sizing: border-box;
    /* justify-content: space-around; */
}

.column {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.image-item {
    position: relative;
    width: 100%;
    flex-grow: 1;
}

.image-item img {
    width: 100%;
    height: 100%;
    border-radius: 5px;
    object-fit: cover;
}

.image-item .overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 5px;
    top: 0;
    left: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: opacity 0.5s ease-in-out;
    background-color: rgba(0 ,0, 0, 0.5);
    color: white;
    opacity: 0;
    font-size: 2em;
    text-align: center;
    z-index: 1;
}

.image-item .overlay h3 {
    font-family: 'Space Mono', serif;
}

.blurb {
    width: 100%;
    color: white;
}

.blurb h2 {
    font-size: 3em;
    text-align: center;
}

.blurb p {
    padding: 0 4em;
    font-size: 1.5em;
    text-align: justify;
}

/* one column on small screens */
@media (max-width: 899px) {
    .gallery-controls {
        display: flex;
        position: sticky;
        top: 0;
        width: 100%;
        justify-content: center;
        padding: 0.5em;
        z-index: 999;
    }

    .gallery-controls button {
        border: none;
        background: none;
        color: white;
        font-size: 1.25em;
        border-radius: 50%;
        padding: 0.5em;
    }

    .gallery-controls button#tile-view-button {
        margin-right: 2em;
    }

    .gallery-controls button#timeline-view-button {
        margin-left: 2em;
    }

    .gallery-controls button.active {
        background-color: rgba(0, 0, 0, 0.8);
    }

    .column {
        flex: 1 0 100%;
    }

    .image-item .overlay {
        opacity: 0;
        transition: opacity 1s ease-in-out;
    }

    .image-item .overlay.visible {
        opacity: 1;
    }

    .image-gallery.tile-view {
        gap: 0px;
    }

    .image-gallery.tile-view .column {
        flex: 1 0 calc(33.33%);
        align-items: center;
    }

    .image-gallery.tile-view .overlay {
        transition: 0s;
    }

    .image-gallery.tile-view .overlay.visible {
        opacity: 0;
    }

    .image-gallery.tile-view .image-item {
        width: 30vw;
        height: 30vw;
    }

    .blurb p {
        padding: 1em;
        font-size: 0.6em;
        text-align: left;
    }
}
/* three columns on large screens */
@media (min-width: 900px) {
    .gallery-controls {
        display: none;
    }

    .column {
        flex: 1 0 calc(33.33% - 10px);
    }
    .hero-image {
        background: linear-gradient(transparent 0%, transparent 70%, var(--global-background-color) 100%), url("../images/hero_cocktails.jpg");
        background-position: bottom;
    }

    .image-item:hover .overlay {
        opacity: 1;
    }
}

